force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <description>Expense items for R3</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EXP-{000000}</displayFormat>
        <label>Expense No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>