force-app/main/default/objects/Expense_Item__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For larger ticket items (e.g. computer equipment, software licenses, office furniture) please create a related asset record.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <type>Lookup</type>
</CustomField>