force-app/main/default/objects/Expense_Item__c/fields/Invoiced_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced to Client</label>
    <type>Checkbox</type>
</CustomField>