force-app/main/default/objects/Expense_Item__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <inlineHelpText>Mileage (for mileage claims only)</inlineHelpText>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>