force-app/main/default/objects/Expense_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Computer Software</fullName>
            </value>
            <value>
                <fullName>Entertainment (not tax deductible)</fullName>
            </value>
            <value>
                <fullName>Entertainment (tax deductible)</fullName>
            </value>
            <value>
                <fullName>Equipment (less than 1000)</fullName>
            </value>
            <value>
                <fullName>Equipment (more than 1000)</fullName>
            </value>
            <value>
                <fullName>Eye Test</fullName>
            </value>
            <value>
                <fullName>General maintenance</fullName>
            </value>
            <value>
                <fullName>Home Office Cost</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Journals, Magazines, Newspapers</fullName>
            </value>
            <value>
                <fullName>Leasing Costs</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other: Please specify (No VAT)</fullName>
            </value>
            <value>
                <fullName>Other: Please specify (VAT)</fullName>
            </value>
            <value>
                <fullName>Other (not tax deductible)</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Postage</fullName>
            </value>
            <value>
                <fullName>Printing and Stationary</fullName>
            </value>
            <value>
                <fullName>Professional &amp; Legal Fees</fullName>
            </value>
            <value>
                <fullName>Subscriptions, Professional Memberships</fullName>
            </value>
            <value>
                <fullName>Subsistence (e.g. lunch)</fullName>
            </value>
            <value>
                <fullName>Telephone &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Accounting Fee</fullName>
                <isActive>false</isActive>
                <label>Accounting Fee</label>
            </value>
            <value>
                <fullName>Advertising</fullName>
                <isActive>false</isActive>
                <label>Advertising</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>