force-app/main/default/objects/Expense_Item__c/validationRules/Account_mandatory_no_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_mandatory_no_project</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Project__c) &amp;&amp; ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>An Account or Project reference must be provided for every expense item!</errorMessage>
</ValidationRule>