force-app/main/default/objects/Expense_Item__c/validationRules/Account_must_match_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_must_match_project</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Project__c) &amp;&amp; !ISBLANK(Account__c) &amp;&amp; (Account__c !=   Project__r.Account__c) &amp;&amp; !ISCHANGED(Project__c)</errorConditionFormula>
    <errorMessage>Account must relate to the project!</errorMessage>
</ValidationRule>