force-app/main/default/objects/Expense_Item__c/validationRules/Mileage_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_required</fullName>
    <active>true</active>
    <description>Ensure mileage is provided for mileage expenses</description>
    <errorConditionFormula>ISPICKVAL(Type__c,&apos;Mileage&apos;) &amp;&amp; ISBLANK(Mileage__c)</errorConditionFormula>
    <errorDisplayField>Mileage__c</errorDisplayField>
    <errorMessage>Enter mileage field for mileage expenses</errorMessage>
</ValidationRule>