force-app/main/default/objects/Expense_Item__c/validationRules/No_edit_after_approval_submission.validationRule-meta.xml
<ValidationRule>
    <fullName>No_edit_after_approval_submission</fullName>
    <active>true</active>
    <description>The expense items cannot be edited after the claim has been submitted for approval.</description>
    <errorConditionFormula>!ISPICKVAL(Expense_Claim__r.Status__c, &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>Editing of expense items is not allowed if the claim has progressed from &apos;Draft&apos; status.</errorMessage>
</ValidationRule>