force-app/main/default/objects/Expense_Item__c/listViews/We_Are_Digital_Mileage.listView-meta.xml
<ListView>
    <fullName>We_Are_Digital_Mileage</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Mileage__c</columns>
    <columns>Project__c</columns>
    <columns>Type__c</columns>
    <columns>Invoiced_to_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>We Are Digital</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expense_Item__c.Mileage</value>
    </filters>
    <label>We Are Digital - Mileage</label>
</ListView>